# etf-portfolio-research

./: .gitignore  Makefile  PROJECT_CHARTER.md  README.md  dvc.yaml  pyproject.toml
.github/workflows/: ci.yml
configs/: base.yaml  constraints_long_only.yaml  universe_global_core.yaml  universe_us_core.yaml
data/metadata/: etf_universe.csv
data/processed/: prices_validated.parquet  returns.parquet
data/raw/: prices.parquet
docs/: architecture.md  assumptions_and_limitations.md  configuration_reference.md  data_dictionary.md  glossary.md  guided_examples.md  how_to_read_the_report.md  interpretation_guide.md  methodology.md  metric_dictionary.md  model_card.md  research_log.md  runbook.md  start_here.md  trust_and_safety.md
handoff/: generate_handoff_bundle.txt  included_files.txt  preflight_summary.json  pytest.txt  ruff_check.txt  ruff_format_check.txt  run_all.txt  uv_sync.txt
legacy/: DJIA_DATA.csv  DJIA_MARKET.csv  DJIA_PORTAFOLIOS_CON_RED_NEURONAL.ipynb  frontera_con_pesos_y_betas.xlsx  mejores_portafolios_acciones_pesos.xlsx  mejores_portafolios_composicion.xlsx
project_info/: TESTING_STRATEGY.md
reports/excel/: optimized_portfolios.xlsx  portfolio_results.xlsx
reports/metrics/: backtest_metrics.json
reports/runs/: backtest_run-all-20260424T054100Z-5c48f5ff.json  backtest_run-all-20260424T060645Z-bdd8bfda.json  backtest_run-all-20260424T131516Z-2e416d52.json  backtest_run-all-20260424T141121Z-1a1090c0.json  backtest_run-all-20260425T090625Z-2ff6c4c2.json
scripts/: generate_handoff_bundle.py
src/etf_portfolio/: cli.py  config.py  tracking.py  (+3 more)
(+61 files in other folders)
